--- a/index.html
+++ b/index.html
@@ -438,6 +438,10 @@
 
     <!-- Status Panel for messages -->
     <div id="statusPanel" class="status-panel"></div>
+<!-- Copyright Information -->
+<>div style="font-size: 0.75em; text-align: center; margin-top: 40px; color: #6c757d;">
+    &copy; ${new Date().getFullYear()} Mutenguna-Franklin-Mukakanga: Nalubamba (aka Franklin Mukakanga). All rights reserved.
+</div
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN6z+VdqzjrL2s" crossorigin="anonymous"></script>
