--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
     <!-- Copyright Information -->
     <div style="font-size: 0.75em; text-align: center; margin-top: 40px; color: #6c757d;">
-        &copy; ${new Date().getFullYear()} Mutenguna-Franklin-Mukakanga: Nalubamba (aka Franklin Mukakanga). All rights reserved.
+        &copy; $2025 Mutenguna-Franklin-Mukakanga: Nalubamba (aka Franklin Mukakanga). All rights reserved.
     </div>
 
     <!-- Bootstrap 5 JS -->
