--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <button class="btn btn-primary d-md-none me-3 hamburger-menu-button" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarOffcanvas" aria-controls="sidebarOffcanvas">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <img src="https://placehold.co/150x40/007bff/ffffff?text=Land+Bank" alt="Land Bank Logo" class="logo">
+                    <img src="https://placehold.co/150x40/007bff/ffffff?text=Nyika" alt="Land Bank Logo" class="logo">
                     <h3 class="mb-0">Cattle Farm Viability Assessment</h3>
                 </div>
                 <div class="farm-selector-section d-flex align-items-center flex-wrap justify-content-center justify-content-md-end">
